--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="src/logic.js" defer></script>
+  <link href="src/input.css" rel="stylesheet" />
   <title>Document</title>
 </head>
 <body>
-  
+  <nav id="navbar">Tic-Tac-Toe</nav>
+  <div id="gameArea">
+    <div class="square" id="tl"></div>
+    <div class="square" id="tm"></div>
+    <div class="square" id="tr"></div>
+    <div class="square" id="ml"></div>
+    <div class="square" id="mm"></div>
+    <div class="square" id="mr"></div>
+    <div class="square" id="bl"></div>
+    <div class="square" id="bm"></div>
+    <div class="square" id="br"></div>
+  </div>
 </body>
 </html>
