Fixed flex issue

--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 </head>
 <body>
   <nav id="navbar">Tic-Tac-Toe</nav>
-  <div id="gameArea">
-    <div class="square" id="tl"></div>
-    <div class="square" id="tm"></div>
-    <div class="square" id="tr"></div>
-    <div class="square" id="ml"></div>
-    <div class="square" id="mm"></div>
-    <div class="square" id="mr"></div>
-    <div class="square" id="bl"></div>
-    <div class="square" id="bm"></div>
-    <div class="square" id="br"></div>
+
+  <p id="pturn">Player 1's turn</p>
+
+  <div id="table">
+    <div id="gameArea">
+      <div class="square" id="tl"></div>
+      <div class="square" id="tm"></div>
+      <div class="square" id="tr"></div>
+      <div class="square" id="ml"></div>
+      <div class="square" id="mm"></div>
+      <div class="square" id="mr"></div>
+      <div class="square" id="bl"></div>
+      <div class="square" id="bm"></div>
+      <div class="square" id="br"></div>
+    </div>
   </div>
 </body>
 </html>
