--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav id="navbar">Tic-Tac-Toe</nav>
 
-  <p id="pturn">Player 1's turn</p>
+  <p id="ptext">Player 1's turn</p>
 
   <div id="table">
     <div id="gameArea">
