Row logic works. Next need to get column logic working

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="src/logic.js" defer></script>
   <link href="src/input.css" rel="stylesheet" />
-  <title>Document</title>
+  <title>Tic-Tac-Toe</title>
 </head>
 <body>
   <nav id="navbar">Tic-Tac-Toe</nav>
