Game is fully functional

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="square" id="bm"></div>
       <div class="square" id="br"></div>
     </div>
+    <button id="again">Play Again?</button>
   </div>
 </body>
 </html>
